exports[`Rest.Collection.List should display "end of list" with no \`entities\` === \`[]\` provided 1`] = `
<p>
  No more 
  Resources
   to show.
</p>
`;

exports[`Rest.Collection.List should display "end of list" with no \`entities\` provided 1`] = `
<p>
  No more 
  Resources
   to show.
</p>
`;

exports[`Rest.Collection.List should render a list; with links 1`] = `
<ul
  className="collection-items list--bare mbm mtl">
  <li
    className="collection-items__item">
    <a
      href="http://example.com/foo-bar"
      onClick={[Function]}
      title="Foo Bar">
      Foo Bar
       
      <span
        className="collection-items__icon" />
    </a>
  </li>
  <li
    className="collection-items__item">
    <a
      href="http://example.com/baz-bam"
      onClick={[Function]}
      title="Baz Bam">
      Baz Bam
       
      <span
        className="collection-items__icon" />
    </a>
  </li>
</ul>
`;

exports[`Rest.Collection.List should render a list; without links 1`] = `
<ul
  className="collection-items list--bare mbm mtl">
  <li
    className="collection-items__item">
    <span>
      Foo Bar
       
      <span
        className="collection-items__icon" />
    </span>
  </li>
  <li
    className="collection-items__item">
    <span>
      Baz Bam
       
      <span
        className="collection-items__icon" />
    </span>
  </li>
</ul>
`;
